k8s/eventbus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: ranamahadahmer/eventbus
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: eventbus
  ports:
  - name: eventbus
    protocol: TCP
    port: 4010
    targetPort: 4010
