k8s/gallerymgmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallerymgmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gallerymgmt
  template:
    metadata:
      labels:
        app: gallerymgmt
    spec:
      containers:
        - name: gallerymgmt
          image: ranamahadahmer/gallerymgmt
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: gallerymgmt-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: gallerymgmt
  ports:
  - name: gallerymgmt
    protocol: TCP
    port: 4002
    targetPort: 4002
