k8s/useraccmgmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useraccmgmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: useraccmgmt
  template:
    metadata:
      labels:
        app: useraccmgmt
    spec:
      containers:
        - name: useraccmgmt
          image: ranamahadahmer/useraccmgmt
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: useraccmgmt-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: useraccmgmt
  ports:
  - name: useraccmgmt
    protocol: TCP
    port: 4000
    targetPort: 4000
