k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost

      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend-cluster-serv
                port:
                  number: 3000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: useraccmgmt-cluster-serv
                port:
                  number: 4000
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: gallerymgmt-cluster-serv
                port:
                  number: 4002
          - path: /queries
            pathType: Prefix
            backend:
              service:
                name: query-cluster-serv
                port:
                  number: 4005
